2004-12-11  John Sullivan  <john@wjsullivan.net>

	* README: Finished writing the README file. Put it under a
	Verbatim Copying notice for now, until a suitable free
	documentation license can be selected.

2004-12-07  John Sullivan  <john@wjsullivan.net>

	* delicious.el (delicious-guess-description): Use `major-mode' to
	help guess appropriate description.
	(delicious-guess-url): Use 'major-mode' to help guess appropriate url.
	
2004-12-06  John Sullivan  <john@wjsullivan.net>

	* delicious.el: Broke posting input out into separate functions,
	`delicious-read-time-string', `delicious-read-url',
	`delicious-read-description',
	`delicious-read-extended-description' to facilitate future
	improvements. Added tip to delicious-read-time-string prompt to
	explain how the argument should be formatted.
	
	
	
